--- a/jbook/package.json
+++ b/jbook/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/parser": "7.14.6",
+    "@babel/traverse": "7.14.5",
     "@monaco-editor/react": "3.7.5",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@types/babel__traverse": "7.11.1",
     "@types/jest": "^26.0.19",
+    "@types/jscodeshift": "0.7.2",
     "@types/node": "^12.19.11",
     "@types/prettier": "^2.4.3",
     "@types/react": "^16.14.2",
@@ -15,8 +19,10 @@
     "axios": "^0.24.0",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "jscodeshift": "0.11.0",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.31.1",
+    "monaco-jsx-highlighter": "0.0.15",
     "prettier": "^2.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
